Make Image as a Card

--- a/Presentation/Nop.Web/Plugins/Misc.NopStationTeams/Views/Configure.cshtml
+++ b/Presentation/Nop.Web/Plugins/Misc.NopStationTeams/Views/Configure.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Nop.Plugin.Misc.NopStationTeams.Models.Profile
 @{
     ViewData["Title"] = "Create Profile";
+    Layout = "_ConfigurePlugin";
 }
 
 <html>
