--- a/Plugins/Nop.Plugin.Misc.NopStationTeams/Views/Configure.cshtml
+++ b/Plugins/Nop.Plugin.Misc.NopStationTeams/Views/Configure.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Nop.Plugin.Misc.NopStationTeams.Models.Profile
 @{
     ViewData["Title"] = "Create Profile";
-}f
+    Layout = "_ConfigurePlugin";
+}
 
 <html>
     <head>
