--- a/Plugins/Nop.Plugin.Misc.NopStationTeams/Views/Configure.cshtml
+++ b/Plugins/Nop.Plugin.Misc.NopStationTeams/Views/Configure.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Create Profile";
     Layout = "_ConfigurePlugin";
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 }
 
 <html>
