--- a/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Developer/_CreateOrUpdate.cshtml
+++ b/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Developer/_CreateOrUpdate.cshtml
@@ -11,6 +11,7 @@
             <div class="cards-group">
                 <div class="card card-default">
                     <div class="card-body">
+
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="Name" />
@@ -20,15 +21,27 @@
                                 <span asp-validation-for="Name"></span>
                             </div>
                         </div>
-                        <div class="form-group row">
+
+                        @* <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="Designation" />
                             </div>
+
                             <div class="col-md-9">
                                 <nop-editor asp-for="Designation" asp-required="true" />
                                 <span asp-validation-for="Designation"></span>
                             </div>
+                        </div> *@
+
+                        <div class="form-group row">
+                            <div class="col-md-3">
+                                <nop-label asp-for="DeveloperDesignationId" />
+                            </div>
+                            <div class="col-md-9">
+                                <nop-select asp-for="DeveloperDesignationId" asp-items="Model.AvailableDeveloperDesignationOptions" />
+                            </div>
                         </div>
+
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="IsMVP" />
@@ -38,6 +51,7 @@
                                 <span asp-validation-for="IsMVP"></span>
                             </div>
                         </div>
+
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="IsNopCommerceCertified" />
@@ -47,6 +61,7 @@
                                 <span asp-validation-for="IsNopCommerceCertified"></span>
                             </div>
                         </div>
+
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="DeveloperStatusId" />
@@ -55,6 +70,7 @@
                                 <nop-select asp-for="DeveloperStatusId" asp-items="Model.AvailableDeveloperStatusOptions" />
                             </div>
                         </div>
+
                     </div>
                 </div>
             </div>
