--- a/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Developer/_CreateOrUpdate.cshtml
+++ b/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Developer/_CreateOrUpdate.cshtml
@@ -8,6 +8,15 @@
 <section class="content">
     <div class="container-fluid">
         <div class="form-horizontal">
+
+            <div class="row">
+                <div class="col-md-12 clearfix">
+                    <div class="float-left">
+                        @await Component.InvokeAsync(typeof(SettingModeViewComponent), new { modeName = "developer-advanced-mode" })
+                    </div>
+                </div>
+            </div>
+
             <div class="cards-group">
                 <div class="card card-default">
                     <div class="card-body">
@@ -22,17 +31,6 @@
                             </div>
                         </div>
 
-                        @* <div class="form-group row">
-                            <div class="col-md-3">
-                                <nop-label asp-for="Designation" />
-                            </div>
-
-                            <div class="col-md-9">
-                                <nop-editor asp-for="Designation" asp-required="true" />
-                                <span asp-validation-for="Designation"></span>
-                            </div>
-                        </div> *@
-
                         <div class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="DeveloperDesignationId" />
@@ -42,7 +40,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group row">
+                        <div class="form-group row advanced-setting">
                             <div class="col-md-3">
                                 <nop-label asp-for="IsMVP" />
                             </div>
@@ -52,7 +50,7 @@
                             </div>
                         </div>
 
-                        <div class="form-group row">
+                        <div class="form-group row advanced-setting">
                             <div class="col-md-3">
                                 <nop-label asp-for="IsNopCommerceCertified" />
                             </div>
