Modify some code. Make some service nullAble

--- a/Plugins/Nop.Plugin.Misc.NopStation/Views/Default.cshtml
+++ b/Plugins/Nop.Plugin.Misc.NopStation/Views/Default.cshtml
@@ -6,6 +6,6 @@
 
 @foreach (var developer in Model)
 {
-    <div>@(i++) @developer.Name @developer.DeveloperDesignationStr</div>
+    <div>@(i++) @developer.Name @developer.DeveloperStatus @developer.DeveloperDesignationStr</div>
     <br />
 }
