--- a/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Default.cshtml
+++ b/Presentation/Nop.Web/Plugins/Misc.NopStation/Views/Default.cshtml
@@ -9,14 +9,13 @@
     {
         <div class="developer-item card">
             <div class="card-body">
-                <div class="slider-wrapper theme-custom">
-                    <div class="nivoSlider">
+                <div>
+                    <div>
                         @{
                             var data = new ViewDataDictionary(ViewData)
-                    {
-                    {"pictureUrl", developer.Picture.ThumbImageUrl},
-                    };
-
+                            {
+                                {"pictureUrl", developer.Picture.ThumbImageUrl},
+                            };
                             @await Html.PartialAsync("~/Plugins/Misc.NopStation/Views/developerList.cshtml", data)
                         }
                     </div>
@@ -24,43 +23,63 @@
                 <div class="card-text">
                     <h5 class="name">@developer.Name</h5>
                     <p class="designation">@developer.DeveloperDesignationStr</p>
-                    @if (developer.IsNopCommerceCertified) // Assuming IsCertified is a boolean property
+                    @if(developer.IsMVP || developer.IsNopCommerceCertified)
                     {
                         <hr />
+                    }
+
+                    <div class="badge-container">
                         @if (developer.IsMVP)
                         {
-                            <div class="mvp-label">MVP</div>
+                            <div class="badge badge-1" title="nopCommerce MVP">
+                                <img src="https://www.nop-station.com/images/thumbs/0002602_bigbadge_mvp.png" alt="MVP" class="badge-image">
+                                <span>nop MVP</span>
+                            </div>
                         }
-                        <div class="certified-label @(developer.IsMVP ? "with-mvp" : "")">Certified</div>
-                    }
+
+                        @if (developer.IsNopCommerceCertified)
+                        {
+                            <div class="badge badge-2" title="nopCommerce Certified">
+                                <img src="https://www.nop-station.com/images/thumbs/0002603_bigbadge_certifieddev.png" alt="Certified" class="badge-image">
+                                <span>Certified</span>
+                            </div>
+                        }
+                    </div>
+
                 </div>
             </div>
         </div>
     }
 </div>
 
+
 <style>
     .developer-container {
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
-        justify-content: flex-start; /* Align items from left to right */
+        gap: 20px;
+        justify-content: flex-start; 
     }
 
     .developer-item {
-        width: calc(25% - 10px); /* 25% width with 10px gap between items */
+        width: calc(24% - 6px); 
         box-sizing: border-box;
-        padding: 10px;
+        padding: 15px;
         text-align: center;
         border: 1px solid #ddd;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 3px;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         background-color: #fff;
         overflow: hidden;
+        transition: box-shadow 0.3s ease-in-out;
     }
 
+        .developer-item:hover {
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+        }
+
     .card-body {
-        padding: 10px;
+        padding: 0;
     }
 
     .slider-wrapper.theme-custom {
@@ -70,41 +89,35 @@
 
     .card-text {
         text-align: center;
+        padding-top: 10px;
     }
 
     .name {
+        font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 5px;
+        color: #333;
+    }
+
+    .designation {
+        font-size: 16px;
+        color: #666;
         margin-bottom: 5px;
     }
 
-    .certified-label {
-        margin-top: 5px;
-        padding: 5px;
-        background-color: #9B7FBB;
-        color: #fff;
-        font-weight: bold;
-        border-radius: 3px;
-        display: inline-block;
+    .badge-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px; /* Adjust the gap between badges as needed */
+        margin-top: 10px; /* Add margin if needed */
     }
 
-        .certified-label.with-mvp {
-            margin-top: 0;
-        }
-
-    .mvp-label {
-        margin-bottom: 5px;
-        padding: 5px;
-        background-color: #47AE7F;
-        color: #fff;
-        font-weight: bold;
-        border-radius: 3px;
-        display: inline-block;
+    .badge {
+        display: flex;
+        align-items: center;
+        gap: 5px; /* Adjust the gap between the image and the text */
     }
 
-    .developer-item img {
-        width: 100%;
-        height: auto;
-        border-bottom: 1px solid #ddd;
-        border-radius: 5px 5px 0 0;
-    }
+        .badge img {
 </style>
-
