--- a/Plugins/Nop.Plugin.Misc.NopStation/Views/DeveloperList.cshtml
+++ b/Plugins/Nop.Plugin.Misc.NopStation/Views/DeveloperList.cshtml
@@ -7,6 +7,8 @@
 
     if (!string.IsNullOrEmpty(pictureUrl))
     {
+        <img src="@pictureUrl" />
+
         // if (!string.IsNullOrEmpty(link))
         // {
         //     <a href="@link">
@@ -14,9 +16,9 @@
         //     </a>
         // }
         // else
-        {
-            // <img src="@pictureUrl" data-thumb="@pictureUrl" />
-            <img src="@pictureUrl"/>
-        }
+        // {
+        //     <img src="@pictureUrl" data-thumb="@pictureUrl" />
+        //     <img src="@pictureUrl"/>
+        // }
     }
 }
