--- a/Presentation/Nop.Web/Plugins/Widgets.Parvez/Views/Index.cshtml
+++ b/Presentation/Nop.Web/Plugins/Widgets.Parvez/Views/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using Nop.Plugin.Widgets.Parvez.Domain
-@model IList<Employee>
+﻿@using Nop.Plugin.Widgets.Parvez.Models
+@* @model IList<Employee> *@
+@model IList<EmployeePublicModel>
 
 @section left
 {
@@ -83,7 +84,7 @@
                             <th>@it.Name</th>
                             <th>@it.IsMVP</th>
                             <th>@it.IsCertified</th>
-                            <th>@it.StatusId</th>
+                            <th>@it.EmployeeStatusStr</th>
                             <th>
                                 <a asp-controller="EmployeePublic" asp-action="Edit" asp-route-id="@it.Id" class="btn btn-primary btn-sm">
                                     <i class="bi bi-pencil-square"></i> Edit
@@ -92,11 +93,6 @@
                                     <i class="bi bi-trash3"></i> Delete
                                 </a>
                             </th>
-                            @* <th>
-                                <a asp-controller="EmployeePublic" asp-action="Delete" asp-route-id="@it.Id" class="btn btn-outline-warning btn-sm">
-                                        <i class="bi bi-trash3"></i> Delete
-                                </a>
-                            </th> *@
                         </tr>
                     }
                 </tbody>
